# les-mosquitos

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  manage.py  openapi.yaml  pyproject.toml
les_mosquitos/: asgi.py  settings.py  urls.py  wsgi.py
les_mosquitos/mosquitos/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
les_mosquitos/mosquitos/migrations/: 0001_initial.py  0002_alter_intervention_options_alter_parcours_options_and_more.py  0003_intervention_intervention_type.py  0004_label_is_treatable.py
les_mosquitos/mosquitos/tests/: conftest.py  test_auth.py  test_interventions.py  test_labels.py  test_parcours.py  test_photos.py  test_points.py  test_tracks.py
