[project]
name = "les-mosquitos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.3",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "pillow>=12.1.1",
    "psycopg[binary]",
    "ruff>=0.15.8",
]

[dependency-groups]
prod = [
    "gunicorn>=25.3.0",
]
